tests/paczka1/small_fuzzy/84441798.err
Error in line 2: d1fVU A920 92,5
Error in line 1: hUVMfqgHS A920 42,7
